# WaoN

./: .gitignore  CMakeLists.txt  README.md
.github/: release.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
examples/: waonrc.example
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/macos/: Info.plist  create-dmg.sh
packaging/rpm/: waon.spec
packaging/windows/: waon.nsi
python/: CMakeLists.txt  pyproject.toml  setup.py  waon_bindings.cpp
python/examples/: advanced_transcription.py  basic_transcription.py  numpy_transcription.py
scripts/: build-arch-docker.sh  build-rpm-docker.sh  generate-changelog.sh
src/common/: VERSION.h  cleanup.c  cleanup.h  fft.c  fft.h  hc.c  hc.h  memory-check.h  snd.c  snd.h
src/gwaon/: gwaon-wav.c
src/lib/: waon.c  waon.h
src/pv/: pv-complex-curses.c  pv-conventional.c  pv-ellis.c  pv-loose-lock.c  pv.c
src/waon/: cli.c  cli.h  config.c  config.h  main.c  progress.c  progress.h
